test/driver/no_source.al
// RUN: (compiler || true) 2>&1 | filecheck %s
// CHECK: error: no source file specified
